# prg_exercises

./: .gitignore  AGENTS.md  README.md  TODO_self_check.md  mkdocs.yml  osnova.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml
.playwright-mcp/: page-2026-04-16T07-22-55-741Z.yml  page-2026-04-16T07-24-10-864Z.yml  page-2026-04-16T07-26-39-067Z.yml  page-2026-04-16T07-27-09-097Z.yml  page-2026-04-16T07-28-30-837Z.yml  page-2026-04-16T07-29-44-150Z.yml  page-2026-04-16T07-38-51-055Z.yml  page-2026-04-16T07-48-08-304Z.yml  page-2026-04-16T07-53-48-576Z.yml  page-2026-04-16T07-57-55-451Z.yml  page-2026-04-16T08-39-07-527Z.yml  page-2026-04-16T08-42-17-173Z.yml  page-2026-04-16T08-44-32-694Z.yml  page-2026-04-16T08-47-41-576Z.yml
docs/: README.md
docs/assets/: content-enhancements.js  mathjax.js  nav-toggle.css  nav-toggle.js  theme-overrides.css
docs/cviceni_01/: 01_úvod.md  04_cíl_3_pokročilé_podmínky.md  README.md  (+7 more)
old/: 01_uvod_do_pythonu.md  02_retezce_datove_typy.md  03_seznamy_vetveni_programu.md  04_cyklus_for.md  06_funkce_moduly.md  07_datove_struktury.md  08_zaklady_git_github.md  09_analyza_algoritmu_vyhledavani.md  10_algoritmy_razeni.md  11_rekurze_rozdel_panuj.md
overrides/: standalone.html
scripts/: _dl_mitbih.py  _remove_axvspan.py  bubble_sort_barplot.py  create_cv09_notebooks.py  generate_asymptotic_intuition_diagrams.py  generate_complexity_growth_chart.py  install-node-and-gemini-user.ps1  install-node-and-gemini-user.sh  restart_mkdocs_server.ps1  stop_mkdocs_server.ps1
(+244 files in other folders)
